--- a/reflections/index.html
+++ b/reflections/index.html
@@ -264,19 +264,22 @@
           <div class="meta">First Edition 2025 • Essay ·
             <a class="title-link" href="/reflections/pages/transcendence/transcendence.pdf">PDF</a>
           </div>
-
-          <div class="cover-actions">
             <!-- LEFT: Share -->
-            <div class="share-group">
-              <a class="btn fb"
-                 data-url="https://stonegrillresto.net/reflections/pages/transcendence/index.html"
-                 href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Ftranscendence%2Findex.html"
-                 target="_blank" rel="noopener">Facebook</a>
-              <a class="btn msg"
-                 data-url="https://stonegrillresto.net/reflections/pages/transcendence/index.html"
-                 href="https://www.facebook.com/dialog/send?link=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fbelief%2Findex.html&app_id=2895055444086567&redirect_uri=https%3A%2F%2Fstonegrillresto.net%2Freflections%2F"
-                 target="_blank" rel="noopener">Messenger</a>
-            </div>
+          <div class="share-group">
+  <!-- Facebook Share -->
+  <a class="btn fb"
+     href="https://www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/transcendence/index.html"
+     target="_blank" rel="noopener">
+     Facebook
+  </a>
+
+  <!-- Messenger Share -->
+  <a class="btn msg"
+     href="https://www.facebook.com/dialog/send?link=https://stonegrillresto.net/reflections/pages/transcendence/index.html&app_id=2895055444086567&redirect_uri=https://stonegrillresto.net/reflections/"
+     target="_blank" rel="noopener">
+     Messenger
+  </a>
+</div>
             <!-- RIGHT: Actions -->
             <div class="action-group">
               <a class="btn read" href="/reflections/pages/transcendence/index.html" target="_blank" rel="noopener">Read</a>
