--- a/reflections/index.html
+++ b/reflections/index.html
@@ -253,7 +253,7 @@
             <img class="book-cover"
                  src="/reflections/pages/transcendence/transcendence.png"
                  alt="transcendence cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+                 onerror="this.src='/reflections/assets/placeholder.png'">
           </a>
         </div>
 
