--- a/reflections/index.html
+++ b/reflections/index.html
@@ -243,54 +243,51 @@
           </script>
         </div>
       </article>
+      
+    <!-- =========================================
+     CARD: TRANSCENDENCE
+     ========================================= -->
+<article class="card">
+  <div class="left">
+    <a class="book-link" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/transcendence/transcendence.png"
+           alt="TRANSCENDENCE cover">
+    </a>
+  </div>
 
-      <!-- =========================================
-           CARD: TRANSCENDENCE
-           ========================================= -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/transcendence/transcendence.png"
-                 alt="transcendence cover"
-                 onerror="this.src='/reflections/assets/placeholder.png'">
-          </a>
-        </div>
+  <div class="right">
+    <h3>
+      <a class="title-link" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">
+        TRANSCENDENCE
+      </a>
+    </h3>
 
-        <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">
-              TRANSCENDENCE</a></h3>
-          <p>Unraveling the Enigma of Absolute Truth</p>
-          <div class="meta">First Edition 2025 • Essay ·
-            <a class="title-link" href="/reflections/pages/transcendence/transcendence.pdf">PDF</a>
-          </div>
-            <!-- LEFT: Share -->
-          <div class="share-group">
-  <!-- Facebook Share -->
-  <a class="btn fb"
-     href="https://www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/transcendence/read.html"
-     target="_blank" rel="noopener">
-     Facebook
-  </a>
+    <p>Unraveling the Enigma of Absolute Truth</p>
+    <p class="meta">First Edition 2025 • Essay • PDF</p>
 
-  <!-- Messenger Share -->
-  <a class="btn msg"
-     href="https://www.facebook.com/dialog/send?link=https://stonegrillresto.net/reflections/pages/transcendence/read.html&app_id=2895055444086567&redirect_uri=https://stonegrillresto.net/reflections/"
-     target="_blank" rel="noopener">
-     Messenger
-  </a>
-</div>
-            <!-- RIGHT: Actions -->
-            <div class="action-group">
-              <a class="btn read" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">Read</a>
-              <a class="btn down" href="/reflections/pages/transcendence/transcendence.pdf">Download</a>
-              <script>
-                document.write(createAudioPlayer('/reflections/pages/transcendence/transcendence.mp3', 'transcendence'));
-              </script>
-            </div>
-          </div>
-        </div>
-      </article>
+    <!-- SHARE BUTTONS -->
+    <div class="share-group"
+         data-share-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
+         data-share-title="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth">
+    </div>
+
+    <!-- READ & DOWNLOAD BUTTONS -->
+    <div class="action-buttons" style="margin-top:8px;">
+      <a class="btn" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener" style="background:#ffcc66;color:#1f1815;">Read</a>
+      <a class="btn" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener" style="background:#2a211e;border:1px solid #ffcc66;color:#ffcc66;">Download</a>
+    </div>
+
+    <!-- AUDIO LISTEN SECTION -->
+    <div class="listen" style="margin-top:10px;">
+      🎧 <strong>Listen:</strong> <em>transcendence</em><br>
+      <audio controls preload="none" style="margin-top:6px;width:100%;">
+        <source src="/reflections/pages/transcendence/transcendence.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </div>
+</article>
       
       <!-- =========================================
            CARD: BELIEF AND GOODNESS
