--- a/reflections/index.html
+++ b/reflections/index.html
@@ -252,7 +252,8 @@
     <a class="book-link" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">
       <img class="book-cover"
            src="/reflections/pages/transcendence/transcendence.png"
-           alt="TRANSCENDENCE cover">
+           alt="Cover of TRANSCENDENCE — Unraveling the Enigma of Absolute Truth"
+           loading="lazy" width="360" height="480">
     </a>
   </div>
 
@@ -266,25 +267,26 @@
     <p>Unraveling the Enigma of Absolute Truth</p>
     <p class="meta">First Edition 2025 • Essay • PDF</p>
 
-    <!-- SHARE BUTTONS -->
+    <!-- SHARE BUTTONS (auto-built by your JS) -->
     <div class="share-group"
          data-share-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
          data-share-title="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth">
     </div>
 
-    <!-- READ & DOWNLOAD BUTTONS -->
-    <div class="action-buttons" style="margin-top:8px;">
-      <a class="btn" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener" style="background:#ffcc66;color:#1f1815;">Read</a>
-      <a class="btn" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener" style="background:#2a211e;border:1px solid #ffcc66;color:#ffcc66;">Download</a>
+    <!-- READ & DOWNLOAD -->
+    <div class="action-buttons">
+      <a class="btn btn-read" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener" aria-label="Read TRANSCENDENCE">Read</a>
+      <a class="btn btn-download" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener" aria-label="Download TRANSCENDENCE PDF">Download</a>
     </div>
 
-    <!-- AUDIO LISTEN SECTION -->
-    <div class="listen" style="margin-top:10px;">
-      🎧 <strong>Listen:</strong> <em>transcendence</em><br>
-      <audio controls preload="none" style="margin-top:6px;width:100%;">
+    <!-- AUDIO -->
+    <div class="audio-section">
+      <p class="audio-label">🎧 Listen: <em>transcendence</em></p>
+      <audio class="audio-player" controls preload="none">
         <source src="/reflections/pages/transcendence/transcendence.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
+      <button class="audio-stop" type="button" aria-label="Stop audio">⏹ Stop</button>
     </div>
   </div>
 </article>
