--- a/reflections/index.html
+++ b/reflections/index.html
@@ -251,9 +251,10 @@
   <div class="left">
     <a class="book-link" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">
       <img class="book-cover"
-           src="/reflections/pages/transcendence/transcendence.png"
-           alt="Cover of TRANSCENDENCE — Unraveling the Enigma of Absolute Truth"
-           loading="lazy" width="360" height="480">
+           src="/reflections/pages/transcendence/transcendence.png?v=3"
+           alt="TRANSCENDENCE cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg';"
+           loading="lazy" width="150" height="220">
     </a>
   </div>
 
@@ -267,27 +268,33 @@
     <p>Unraveling the Enigma of Absolute Truth</p>
     <p class="meta">First Edition 2025 • Essay • PDF</p>
 
-    <!-- SHARE BUTTONS (auto-built by your JS) -->
-    <div class="share-group"
-         data-share-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
-         data-share-title="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth">
+    <div class="cover-actions">
+      <!-- LEFT: Share -->
+      <div class="share-group">
+        <a class="btn fb"
+           data-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
+           href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Ftranscendence%2Fread.html"
+           target="_blank" rel="noopener">Facebook</a>
+        <a class="btn msg"
+           data-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
+           href="https://www.facebook.com/dialog/send?link=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Ftranscendence%2Fread.html&app_id=2895055444086567&redirect_uri=https%3A%2F%2Fstonegrillresto.net%2Freflections%2F"
+           target="_blank" rel="noopener">Messenger</a>
+      </div>
+
+      <!-- RIGHT: Actions -->
+      <div class="action-group">
+        <a class="btn read" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener">Read</a>
+        <a class="btn down" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener">Download</a>
+      </div>
     </div>
 
-    <!-- READ & DOWNLOAD -->
-    <div class="action-buttons">
-      <a class="btn btn-read" href="/reflections/pages/transcendence/read.html" target="_blank" rel="noopener" aria-label="Read TRANSCENDENCE">Read</a>
-      <a class="btn btn-download" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener" aria-label="Download TRANSCENDENCE PDF">Download</a>
-    </div>
-
-    <!-- AUDIO -->
-    <div class="audio-section">
-      <p class="audio-label">🎧 Listen: <em>transcendence</em></p>
-      <audio class="audio-player" controls preload="none">
-        <source src="/reflections/pages/transcendence/transcendence.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
-      <button class="audio-stop" type="button" aria-label="Stop audio">⏹ Stop</button>
-    </div>
+    <!-- 🎧 Audio -->
+    <script>
+      document.write(createAudioPlayer(
+        '/reflections/pages/transcendence/transcendence.mp3',
+        'TRANSCENDENCE'
+      ));
+    </script>
   </div>
 </article>
       
