--- a/reflections/index.html
+++ b/reflections/index.html
@@ -16,7 +16,7 @@
 
   <!-- Global assets -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
-  <script src="/reflections/assets/audio-system.js?v=12" defer></script>
+  <script src="/reflections/assets/audio-system.js?v=12"></script>
 </head>
 
 <body>
