--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -116,8 +116,8 @@
   <!-- ===== Header ===== -->
   <header>
     <div class="mast">
-      <a href="/transcendence.png" target="_blank" rel="noopener">
-        <img class="cover" src="/transcendence.png" alt="TRANSCENDENCE cover">
+      <a href="transcendence.png" target="_blank" rel="noopener">
+        <img class="cover" src="transcendence.png" alt="TRANSCENDENCE cover">
       </a>
       <div class="titles">
         <h1>TRANSCENDENCE</h1>
