--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -206,6 +206,7 @@
         However, the modern crisis lies in the realization that the necessity of the Absolute does not guarantee its existence. Contemporary thought, particularly Existentialism, concludes that the pursuit of a transcendent, objective Absolute is a dangerous form of escapism that fosters imbalance. Instead, it advocates for abandoning the search for a pre-existing Absolute and embracing the immanent task: accepting the reality of our subjective, limited lives and courageously creating our own relative meaning within the beautiful, messy, and fundamentally un-absolutist world.
       </p>
     </article>
+    <a class="btn" href="/reflections/index.html">← Back to Reflections</a>
   </main>
 
   <footer>
