--- a/reflections/index.html
+++ b/reflections/index.html
@@ -173,7 +173,7 @@
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/moments-of-solitude/index.html" target="_blank" rel="noopener">Moments of Solitude — How Silence Teaches</a></h3>
+          <h3><a class="title-link" href="/reflections/pages/moments-of-solitude/index.html" target="_blank" rel="noopener">Moments of Solitude</h3> <p>How Silence Teaches</p></a>
           <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf" target="_blank" rel="noopener">PDF</a></p>
           <div class="share-group"
