--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="article">
   <meta property="og:title" content="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth">
   <meta property="og:description" content="The journey from transcendence to Absolute Reality — a reflection by Ninox Antolihao.">
-  <meta property="og:image" content="/reflections/pages/transcendence/b1c99ba7-45d4-45cf-acf6-bc78b2edd891.png">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.png">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <style>
