--- a/reflections/index.html
+++ b/reflections/index.html
@@ -136,6 +136,40 @@
       </article>
 
       <!-- =========================================
+     CARD: THE INITIAL PREMISE OF A PERFECT, LOVING GOD
+     ========================================= -->
+<article class="card">
+  <div class="left">
+    <a class="book-link" href="/reflections/pages/initial-premise/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/initial-premise/cover.jpg"
+           alt="The Initial Premise of a Perfect, Loving God cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg'">
+    </a>
+  </div>
+
+  <div class="right">
+    <h3>
+      <a class="title-link" href="/reflections/pages/initial-premise/read.html" target="_blank" rel="noopener">
+        The Initial Premise of a Perfect, Loving God
+      </a>
+    </h3>
+
+    <p>A reflection exploring the foundation of divine perfection and love — creation as overflow, freedom as trust, and distance as the teacher of longing.</p>
+
+    <div class="meta">
+      First Edition 2025 • By Ninox Antolihao
+    </div>
+
+    <div class="actions">
+      <a class="btn primary" href="/reflections/pages/initial-premise/read.html" target="_blank" rel="noopener">Read</a>
+      <a class="btn ghost" href="/reflections/pages/initial-premise/The_Initial_Premise_of_a_Perfect_Loving_God.pdf" download>Download</a>
+      <a class="btn ghost" href="/reflections/pages/initial-premise/initial-premise.mp3" target="_blank" rel="noopener">Listen</a>
+    </div>
+  </div>
+</article>
+      
+      <!-- =========================================
            5) CARD: When labeled SINNER
            ========================================= -->
       <article class="card">
