--- a/reflections/pages/initial-premise/initial-premise-read.html
+++ b/reflections/pages/initial-premise/initial-premise-read.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Press">
+    <img src="android-chrome-512x512.png" alt="Stone Grill Press">
     <div>
       <h1>The Initial Premise of a Perfect, Loving God</h1>
       <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
