--- a/reflections/index.html
+++ b/reflections/index.html
@@ -151,7 +151,7 @@
   <div class="right">
     <h3>
       <a class="title-link" href="/reflections/pages/initial-premise/initial-premise-read.html" target="_blank" rel="noopener">
-        The Initial Premise of a Perfect, Loving God
+        DIVINE PREMISE
       </a>
     </h3>
 
