--- a/reflections/pages/initial-premise/initial-premise-read.html
+++ b/reflections/pages/initial-premise/initial-premise-read.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Initial Premise of a Perfect, Loving God — Ninox Antolihao</title>
+  <title>The Divine Premise — Ninox Antolihao</title>
   <meta name="description" content="A reflection on the premise that a perfect, loving God creates from fullness, entrusts freedom, and teaches through reverent distance.">
 
   <!-- Share / SEO -->
@@ -50,7 +50,8 @@
   <header>
     <img src="android-chrome-512x512.png" alt="Stone Grill Press">
     <div>
-      <h1>The Initial Premise of a Perfect, Loving God</h1>
+      <h1>The Divine Premise</h1>
+      <h3>The Initial Premise of a Perfect, Loving God</h3>
       <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
     </div>
   </header>
