--- a/reflections/index.html
+++ b/reflections/index.html
@@ -195,6 +195,53 @@
       </article>
 
       <!-- =========================================
+     CARD: SILENT INFLUENCE
+     ========================================= -->
+<article class="card">
+  <div class="left">
+    <a class="book-link" href="/reflections/pages/silent-influence/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/silent-influence/silent-influence.PNG"
+           alt="Silent Influence cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg'">
+    </a>
+  </div>
+
+  <div class="right">
+    <h3>
+      <a class="title-link" href="/reflections/pages/silent-influence/read.html" target="_blank" rel="noopener">
+        Silent Influence
+      </a>
+    </h3>
+
+    <p>Even our quietest actions can shape the souls around us — for good or for harm.</p>
+
+    <div class="meta">
+      First Edition 2025 • Ninox Antolihao
+    </div>
+
+    <!-- Use classes (not duplicate IDs) so multiple cards work safely -->
+    <div class="audio-wrap">
+      <p class="label">🎧 Audio Reflection: <strong>Silent Influence</strong></p>
+      <audio class="audio-player" controls preload="auto" style="width:100%">
+        <source src="/reflections/pages/silent-influence/silent-influence.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      <button class="btn ghost audio-stop" style="margin-top:8px">⏹ Stop</button>
+    </div>
+
+    <div class="share-btns" style="margin-top:10px;">
+      <a class="btn" 
+         href="https://www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/silent-influence/read.html" 
+         target="_blank" rel="noopener">Share</a>
+      <a class="btn" 
+         href="/reflections/pages/silent-influence/read.html" 
+         target="_blank" rel="noopener">Read</a>
+    </div>
+  </div>
+</article>
+      
+      <!-- =========================================
            6) CARD: MOMENTS OF SOLITUDE
            ========================================= -->
       <article class="card">
