--- a/reflections/pages/silent-influence/read.html
+++ b/reflections/pages/silent-influence/read.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
+    <img src="logo.png" alt="Stone Grill Logo">
     <h1>Silent Influence</h1>
     <p class="meta">By Ninox Antolihao • First Edition 2025</p>
   </header>
