--- a/reflections/index.html
+++ b/reflections/index.html
@@ -110,6 +110,47 @@
         </div>
       </article>
 
+       <!-- =========================================
+           CARD: THE MADNESS OF FAITH
+           ========================================= -->
+<article class="card">
+  <div class="left">
+    <a class="book-link" href="/reflections/pages/the-madness-of-faith/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.png"
+           alt="The Madness of Faith cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg'">
+    </a>
+  </div>
+
+  <div class="right">
+    <h3>
+      <a class="title-link" href="/reflections/pages/the-madness-of-faith/read.html" target="_blank" rel="noopener">
+        The Madness of Faith
+      </a>
+    </h3>
+
+    <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
+
+    <section class="audio-wrap" id="audioMount-madness">
+      <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
+      <audio controls preload="auto" style="width:100%">
+        <source src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      <button class="btn ghost" style="margin-top:8px">⏹ Stop</button>
+    </section>
+
+    <div class="meta">
+      First Edition 2025 • 
+      <a class="title-link"
+         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-faith%2Fread.html"
+         target="_blank" rel="noopener">Share</a>
+    </div>
+  </div>
+</article>
+
+      
       <!-- =========================================
            4) CARD: BELIEF AND GOODNESS
            ========================================= -->
