--- a/reflections/index.html
+++ b/reflections/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Solitude Reflections — Stone Grill</title>
   <meta name="description" content="All reflections in one page — read or download.">
-  <link rel="icon" href="/assets/favicon.ico">
+  <link rel="icon" href="/reflections/assets/favicon.ico">
 
   <!-- Social preview (keep as-is) -->
   <meta property="og:image" content="https://stonegrillresto.net/reflections/Untitled.png">
@@ -115,9 +115,9 @@
            ========================================= -->
 <article class="card">
   <div class="left">
-    <a class="book-link" href="/reflections/pages/the-madness-of-faith/read.html" target="_blank" rel="noopener">
+    <a class="book-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
       <img class="book-cover"
-           src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.png"
+           src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.png"
            alt="The Madness of Faith cover"
            onerror="this.src='/reflections/assets/placeholder.jpg'">
     </a>
@@ -125,7 +125,7 @@
 
   <div class="right">
     <h3>
-      <a class="title-link" href="/reflections/pages/the-madness-of-faith/read.html" target="_blank" rel="noopener">
+      <a class="title-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
         The Madness of Faith
       </a>
     </h3>
@@ -135,7 +135,7 @@
     <section class="audio-wrap" id="audioMount-madness">
       <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
       <audio controls preload="auto" style="width:100%">
-        <source src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.mp3" type="audio/mpeg">
+        <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
       <button class="btn ghost" style="margin-top:8px">⏹ Stop</button>
@@ -144,7 +144,7 @@
     <div class="meta">
       First Edition 2025 • 
       <a class="title-link"
-         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-faith%2Fread.html"
+         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-fath%2Fread.html"
          target="_blank" rel="noopener">Share</a>
     </div>
   </div>
