--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
+    <img src="logo.PNG" alt="Stone Grill Logo">
     <h1>The Madness of Faith</h1>
     <p class="meta">By Ninox Antolihao • First Edition 2025</p>
   </header>
@@ -26,12 +26,12 @@
       <p>Let faith, then, be the courage to think — and the humility to admit we don’t know. Let it never destroy. Let it <strong>guide</strong>.</p>
 
       <section class="download-share" style="margin-top:1.25rem">
-        <a class="btn" href="/reflections/pages/the-madness-of-faith/the-madness-of-faith.pdf" target="_blank" rel="noopener">Download PDF</a>
-        <a class="btn ghost" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-faith%2Fread.html" target="_blank" rel="noopener">Share</a>
+        <a class="btn" href="/reflections/pages/the-madness-of-fath/the-madness-of-faith.pdf" target="_blank" rel="noopener">Download PDF</a
+        <a class="btn ghost" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-fath%2Fread.html" target="_blank" rel="noopener">Share</a>
       </section>
 
       <figure class="cover-figure" style="margin-top:1.5rem">
-        <img class="book-cover" src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.png" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img class="book-cover" src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.png" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
         <figcaption style="color:#c9b0a4;margin-top:8px">Cover — The Madness of Faith</figcaption>
       </figure>
     </article>
