--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -36,6 +36,22 @@
     margin-left: auto;
     margin-right: auto;
   }
+    <style>
+  /* Reduce the logo size and center it */
+  header img {
+    display: block;
+    margin: 0 auto 1rem auto;
+    max-width: 140px;   /* adjust size — you can try 120–160px */
+    height: auto;
+  }
+
+  /* Optional: tighten spacing under the header */
+  header {
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+  }
+</style>
 </style>
 </head>
 <body>
