--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
+    <img src="/reflections/assets/logo1.PNG" alt="Stone Grill Logo">
     <h1>The Madness of Faith</h1>
     <p class="meta">By Ninox Antolihao • First Edition 2025</p>
   </header>
