--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -8,7 +8,51 @@
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
   <meta property="og:title" content="The Madness of Faith — Ninox Antolihao">
   <meta property="og:description" content="Let faith never destroy. Let it guide.">
-  <meta property="og:image" content="/reflections/pages/the-madness-of-faith/the-madness-of-faith.png">
+  <meta property="og:image" content="/reflections/pages/the-madness-of-faith/the-madness-of-fath.png">
+  <style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #1f1815;
+    color: #f3e6dd;
+  }
+
+  main.page-wrap {
+    padding: 0 1rem; /* adds left/right breathing space */
+  }
+
+  article.content {
+    max-width: 800px;
+    margin: 0 auto;
+    line-height: 1.7;
+  }
+
+  header, footer {
+    padding: 1rem;
+    text-align: center;
+  }
+
+  h1, h2, p {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  /* Reduce the logo size and center it */
+  header img {
+    display: block;
+    margin: 0 auto 1rem auto;
+    max-width: 140px;   /* adjust size — you can try 120–160px */
+    height: auto;
+  }
+
+  /* Optional: tighten spacing under the header */
+  header {
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+  }
+
+</style>
 </head>
 <body>
   <header>
