--- a/reflections/index.html
+++ b/reflections/index.html
@@ -17,6 +17,8 @@
   <!-- Global assets -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
   <script src="/reflections/assets/audio-system.js?v=12"></script>
+  <link rel="manifest" href="/reflections/manifest.json">
+<meta name="theme-color" content="#ff6b3d">
 </head>
 
 <body>
@@ -422,5 +424,12 @@
     © 2025 Stone Grill Restaurant ·
     <a href="tel:0535680539">Call 053 568 0539</a>
   </footer>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/reflections/sw.js')
+      .then(reg => console.log('Reflections service worker registered.', reg))
+      .catch(err => console.warn('SW registration failed:', err));
+  }
+</script>
 </body>
 </html>
