--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -65,7 +65,7 @@
   <section class="audio-wrap" id="audioMount" style="margin:16px 0;">
     <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
     <audio id="nativeAudio" controls preload="auto" style="width:100%">
-      <source src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.mp3" type="audio/mpeg">
+      <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
     <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
@@ -92,12 +92,12 @@
       </a>
 
       <section class="download-share" style="margin-top:1.25rem">
-        <a class="btn" href="/reflections/pages/the-madness-of-faith/the-madness-of-faith.pdf" target="_blank" rel="noopener">Download PDF</a>
-        <a class="btn ghost" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-faith%2Fread.html" target="_blank" rel="noopener">Share</a>
+        <a class="btn" href="/reflections/pages/the-madness-of-faith/the-madness-of-fath.pdf" target="_blank" rel="noopener">Download PDF</a>
+        <a class="btn ghost" href="https://www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/the-madness/of-fath/read.html" target="_blank" rel="noopener">Share</a>
       </section>
 
       <figure class="cover-figure" style="margin-top:1.5rem">
-        <img class="book-cover" src="/reflections/pages/the-madness-of-faith/the-madness-of-faith.png" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img class="book-cover" src="/reflections/pages/the-madness-of-fath/logo.jpg" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
         <figcaption style="color:#c9b0a4;margin-top:8px">Cover — The Madness of Faith</figcaption>
       </figure>
     </article>
