--- a/reflections/index.html
+++ b/reflections/index.html
@@ -117,7 +117,7 @@
            ========================================= -->
 <article class="card">
   <div class="left">
-    <a class="book-link" href="/reflections/pages/the-madness-of-fath/the-madness-of-fath-read.html" target="_blank" rel="noopener">
+    <a class="book-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
       <img class="book-cover"
            src="/reflections/pages/the-madness-of-fath/cover.png"
            alt="The Madness of Faith cover"
@@ -127,7 +127,7 @@
 
   <div class="right">
     <h3>
-      <a class="title-link" href="/reflections/pages/the-madness-of-fath/the-madness-of-fath-read.html" target="_blank" rel="noopener">
+      <a class="title-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
         The Madness of Faith
       </a>
     </h3>
@@ -146,7 +146,7 @@
     <div class="meta">
       First Edition 2025 • 
       <a class="title-link"
-         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-fath%2Fread.html"
+         href="https://www.facebook.com/sharer/sharer.php?u=http://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html"
          target="_blank" rel="noopener">Share</a>
     </div>
   </div>
