--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -65,7 +65,7 @@
   <section class="audio-wrap" id="audioMount" style="margin:16px 0;">
     <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
     <audio id="nativeAudio" controls preload="auto" style="width:100%">
-      <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
+      <source src="the-madness-of-faith.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
     <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
@@ -97,7 +97,7 @@
       </section>
 
       <figure class="cover-figure" style="margin-top:1.5rem">
-        <img class="book-cover" src="/reflections/pages/the-madness-of-fath/logo.jpg" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img class="book-cover" src="logo.jpg" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
         <figcaption style="color:#c9b0a4;margin-top:8px">Cover — The Madness of Faith</figcaption>
       </figure>
     </article>
