--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
   <meta property="og:title" content="The Madness of Faith — Ninox Antolihao">
   <meta property="og:description" content="Let faith never destroy. Let it guide.">
-  <meta property="og:image" content="/reflections/pages/the-madness-of-faith/the-madness-of-fath.png">
+  <meta property="og:image" content="logo.PNG">
   <style>
   body {
     margin: 0;
