--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -62,6 +62,8 @@
   }
 
 </style>
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+  <script src="/reflections/assets/audio-system.js"></script>
 </head>
 <body>
   <header>
