--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -68,7 +68,7 @@
   <section class="audio-wrap" id="audioMount" style="margin:16px 0;">
     <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
     <audio id="nativeAudio" controls preload="auto" style="width:100%">
-      <source src="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
+      <source src="the-madness-of-faith.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
     <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
