--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -5,57 +5,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>The Madness of Faith — Ninox Antolihao</title>
   <meta name="description" content="Let faith never destroy. Let it guide.">
+
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
+
   <meta property="og:title" content="The Madness of Faith — Ninox Antolihao">
   <meta property="og:description" content="Let faith never destroy. Let it guide.">
   <meta property="og:image" content="logo.PNG">
+
   <style>
-   
-  body {
-    margin: 0;
-    padding: 0;
-    background-color: #1f1815;
-    color: #f3e6dd;
-  }
-
-  main.page-wrap {
-    padding: 0 1rem; /* adds left/right breathing space */
-  }
-
-  article.content {
-    max-width: 800px;
-    margin: 0 auto;
-    line-height: 1.7;
-  }
-
-  header, footer {
-    padding: 1rem;
-    text-align: center;
-  }
-
-  h1, h2, p {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  /* Reduce the logo size and center it */
-  header img {
-    display: block;
-    margin: 0 auto 1rem auto;
-    max-width: 140px;   /* adjust size — you can try 120–160px */
-    height: auto;
-  }
-
-  /* Optional: tighten spacing under the header */
-  header {
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
-  }
-
-</style>
-  <link rel="stylesheet" href="/reflections/assets/reflections.css">
-  <script src="/reflections/assets/audio-system.js"></script>
+    body { margin:0; padding:0; background:#1f1815; color:#f3e6dd; }
+    main.page-wrap { padding:0 1rem; }
+    article.content { max-width:800px; margin:0 auto; line-height:1.7; }
+    header, footer { padding:1rem; text-align:center; }
+    h1, h2, p { margin-left:auto; margin-right:auto; }
+    header img { display:block; margin:0 auto 1rem; max-width:140px; height:auto; }
+    header { padding-top:1rem; padding-bottom:0.5rem; }
+  </style>
 </head>
 <body>
   <header>
@@ -64,15 +29,15 @@
     <p class="meta">By Ninox Antolihao • First Edition 2025</p>
   </header>
 
-  <!-- === AUDIO CARD === -->
+  <!-- AUDIO: native first; JS will enhance and auto-fallback -->
   <section class="audio-wrap" id="audioMount" style="margin:16px 0;">
-    <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
-    <audio id="nativeAudio" controls preload="auto" style="width:100%">
-      <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-    <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
-  </section>
+  <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
+  <audio id="nativeAudio" controls preload="auto" style="width:100%">
+    <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+  <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
+</section>
 
   <main class="page-wrap">
     <article class="content">
@@ -88,19 +53,23 @@
       <p>Faith was meant to lift the heart, not chain it. It was meant to awaken, not to numb. If there is a God, He would not ask us to crawl in darkness when He gave us eyes to see.</p>
       <p>Let faith, then, be the courage to think — and the humility to admit we don’t know. Let it never destroy. Let it <strong>guide</strong>.</p>
 
-      <!-- Back to reflections -->
-      <a href="/reflections/index.html" class="back" 
+      <a href="/reflections/index.html" class="back"
          style="display:inline-block;margin-top:1rem;color:#ff6f3c;text-decoration:none;font-weight:bold;">
          ← Back to Reflections
       </a>
 
       <section class="download-share" style="margin-top:1.25rem">
-        <a class="btn" href="/reflections/pages/the-madness-of-faith/the-madness-of-fath.pdf" target="_blank" rel="noopener">Download PDF</a>
-        <a class="btn ghost" href="https:/www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/the-madness/of-fath/read.html" target="_blank" rel="noopener">Share</a>
+        <!-- PDF inside the same FOLDER (fath) -->
+        <a class="btn" href="/reflections/pages/the-madness-of-fath/the-madness-of-faith.pdf" target="_blank" rel="noopener">Download PDF</a>
+        <!-- Share the FOLDER/PAGE with proper encoding -->
+        <a class="btn ghost"
+           href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fthe-madness-of-fath%2Fread.html"
+           target="_blank" rel="noopener">Share</a>
       </section>
 
       <figure class="cover-figure" style="margin-top:1.5rem">
-        <img class="book-cover" src="logo.jpg" alt="Cover of The Madness of Faith" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img class="book-cover" src="logo.jpg" alt="Cover of The Madness of Faith"
+             onerror="this.src='/reflections/assets/placeholder.jpg'">
         <figcaption style="color:#c9b0a4;margin-top:8px">Cover — The Madness of Faith</figcaption>
       </figure>
     </article>
@@ -110,20 +79,38 @@
     <p>© 2025 Ninox Antolihao · Stone Grill Press</p>
   </footer>
 
+  <!-- Load once, then enhance -->
   <script src="/reflections/assets/audio-system.js"></script>
   <script>
-    (function() {
+    (function () {
       try {
+        // If your audio-system injects a custom player, feed it the primary FAITH.mp3.
         if (typeof createAudioPlayer === 'function') {
           const mount = document.getElementById('audioMount');
           const title = "The Madness of Faith";
-          const src = "/reflections/pages/the-madness-of-faith/the-madness-of-faith.mp3";
-          mount.innerHTML = createAudioPlayer(src, title);
+          const primarySrc = "/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3";
+          const fallbackSrc = "/reflections/pages/the-madness-of-fath/the-madness-of-fath.mp3";
+          mount.innerHTML = createAudioPlayer(primarySrc, title);
+
+          // Auto-fallback if the first filename doesn't exist
+          const audioEl = mount.querySelector('audio');
+          if (audioEl) {
+            audioEl.addEventListener('error', function () {
+              if (audioEl.dataset.altTried === '1') return;
+              audioEl.dataset.altTried = '1';
+              const s = audioEl.querySelector('source');
+              if (s) { s.src = fallbackSrc; }
+              audioEl.load();
+              audioEl.play().catch(() => {});
+            }, { once: false });
+          }
         }
       } catch (e) {
         console.warn("Audio enhancement failed; native player remains.", e);
       }
-      document.addEventListener('click', function(e) {
+
+      // Stop button works for both native/enhanced players
+      document.addEventListener('click', function (e) {
         if (e.target && (e.target.id === 'stopAudio' || e.target.classList.contains('audio-stop'))) {
           const audio = document.querySelector('audio');
           if (audio) { audio.pause(); audio.currentTime = 0; }
